[package]
name = "polkadot-sdk-docs"
description = "The one stop shop for developers of the polkadot-sdk"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "paritytech.github.io"
repository.workspace = true
authors.workspace = true
edition.workspace = true
# This crate is not publish-able to crates.io for now because of docify.
publish = false
version = "0.1.0"

[lints]
workspace = true

[dependencies]
# Needed for all FRAME-based code
codec = { workspace = true }
frame = { features = ["experimental", "runtime"], workspace = true, default-features = true }
pallet-contracts = { workspace = true }
pallet-default-config-example = { default-features = true, workspace = true }
pallet-example-offchain-worker = { default-features = true, workspace = true }
pallet-examples = { workspace = true }
scale-info = { workspace = true }

# How we build docs in rust-docs
chain-spec-builder = { default-features = true, workspace = true }
chain-spec-guide-runtime = { default-features = true, workspace = true }
cumulus-client-service = { default-features = true, workspace = true }
cumulus-pallet-aura-ext = { default-features = true, workspace = true }
cumulus-pallet-parachain-system = { default-features = true, workspace = true }
cumulus-pallet-weight-reclaim = { default-features = true, workspace = true }
cumulus-primitives-proof-size-hostfunction = { default-features = true, workspace = true }
docify = { workspace = true }
first-runtime = { default-features = true, workspace = true }
frame-benchmarking = { workspace = true }
frame-executive = { workspace = true }
frame-metadata-hash-extension = { default-features = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
kitchensink-runtime = { workspace = true }
log = { workspace = true, default-features = true }
minimal-template-runtime = { default-features = true, workspace = true }
node-cli = { workspace = true }
pallet-asset-conversion-tx-payment = { default-features = true, workspace = true }
pallet-asset-tx-payment = { default-features = true, workspace = true }
pallet-assets = { default-features = true, workspace = true }
pallet-aura = { default-features = true, workspace = true }
pallet-babe = { default-features = true, workspace = true }
pallet-balances = { default-features = true, workspace = true }
pallet-collective = { default-features = true, workspace = true }
pallet-democracy = { default-features = true, workspace = true }
pallet-example-authorization-tx-extension = { default-features = true, workspace = true }
pallet-example-single-block-migrations = { default-features = true, workspace = true }
pallet-grandpa = { default-features = true, workspace = true }
pallet-nfts = { default-features = true, workspace = true }
pallet-preimage = { default-features = true, workspace = true }
pallet-scheduler = { default-features = true, workspace = true }
pallet-skip-feeless-payment = { default-features = true, workspace = true }
pallet-timestamp = { default-features = true, workspace = true }
pallet-transaction-payment = { default-features = true, workspace = true }
pallet-uniques = { default-features = true, workspace = true }
pallet-xcm = { workspace = true }
parachain-info = { default-features = true, workspace = true }
polkadot-omni-node-lib = { default-features = true, workspace = true }
polkadot-sdk = { features = ["runtime-full"], workspace = true, default-features = true }
sc-chain-spec = { default-features = true, workspace = true }
sc-cli = { default-features = true, workspace = true }
sc-client-db = { default-features = true, workspace = true }
sc-consensus-aura = { default-features = true, workspace = true }
sc-consensus-babe = { default-features = true, workspace = true }
sc-consensus-beefy = { default-features = true, workspace = true }
sc-consensus-grandpa = { default-features = true, workspace = true }
sc-consensus-manual-seal = { default-features = true, workspace = true }
sc-consensus-pow = { default-features = true, workspace = true }
sc-executor = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-rpc = { default-features = true, workspace = true }
sc-rpc-api = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
serde_json = { workspace = true }
simple-mermaid = { workspace = true }
solochain-template-runtime = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-arithmetic = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-genesis-builder = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-offchain = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-runtime-interface = { default-features = true, workspace = true }
sp-std = { default-features = true, workspace = true }
sp-storage = { default-features = true, workspace = true }
sp-tracing = { default-features = true, workspace = true }
sp-version = { default-features = true, workspace = true }
sp-weights = { default-features = true, workspace = true }
subkey = { default-features = true, workspace = true }
substrate-wasm-builder = { default-features = true, workspace = true }
xcm = { default-features = true, workspace = true }
xcm-builder = { workspace = true }
xcm-docs = { workspace = true }
xcm-executor = { workspace = true }
xcm-simulator = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
cmd_lib = { workspace = true }
rand = { workspace = true, default-features = true }
tokio = { workspace = true }
