[package]
name = "polkadot-erasure-coding"
version = "24.0.0"
description = "Erasure coding used for Polkadot's availability system"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { features = ["derive", "std"], workspace = true }
novelpoly = { workspace = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-trie = { default-features = true, workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { features = ["cargo_bench_support"], workspace = true }
quickcheck = { workspace = true }

[[bench]]
name = "scaling_with_validators"
harness = false
