[package]
name = "polkadot-rpc"
version = "30.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Polkadot specific RPC functionality."
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
jsonrpsee = { features = ["server"], workspace = true }
mmr-rpc = { default-features = true, workspace = true }
pallet-transaction-payment-rpc = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
sc-chain-spec = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-consensus-babe = { default-features = true, workspace = true }
sc-consensus-babe-rpc = { default-features = true, workspace = true }
sc-consensus-beefy = { default-features = true, workspace = true }
sc-consensus-beefy-rpc = { default-features = true, workspace = true }
sc-consensus-grandpa = { default-features = true, workspace = true }
sc-consensus-grandpa-rpc = { default-features = true, workspace = true }
sc-rpc = { default-features = true, workspace = true }
sc-sync-state-rpc = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-application-crypto = { default-features = true, workspace = true }
sp-block-builder = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-consensus-babe = { default-features = true, workspace = true }
sp-consensus-beefy = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
substrate-frame-rpc-system = { default-features = true, workspace = true }
substrate-state-trie-migration-rpc = { default-features = true, workspace = true }
