[package]
name = "relay-substrate-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]

async-channel = { workspace = true }
async-trait = { workspace = true }
bp-header-chain = { default-features = true, workspace = true }
bp-messages = { default-features = true, workspace = true }
bp-polkadot-core = { default-features = true, workspace = true }
bp-runtime = { default-features = true, workspace = true }
codec = { workspace = true, default-features = true }
finality-relay = { workspace = true }
frame-support = { default-features = true, workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["macros", "ws-client"], workspace = true }
num-traits = { workspace = true, default-features = true }
pallet-transaction-payment = { default-features = true, workspace = true }
pallet-transaction-payment-rpc-runtime-api = { default-features = true, workspace = true }
pallet-utility = { default-features = true, workspace = true }
quick_cache = { workspace = true }
rand = { workspace = true, default-features = true }
relay-utils = { workspace = true }
sc-chain-spec = { default-features = true, workspace = true }
sc-rpc-api = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
scale-info = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true }
sp-consensus-grandpa = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-rpc = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-std = { default-features = true, workspace = true }
sp-trie = { default-features = true, workspace = true }
sp-version = { default-features = true, workspace = true }
thiserror = { workspace = true }
tokio = { features = ["rt-multi-thread"], workspace = true, default-features = true }
tracing = { workspace = true }
xcm = { default-features = true, workspace = true }

[features]
default = []
test-helpers = []
