[package]
name = "snowbridge-test-utils"
description = "Snowbridge test utilities"
version = "0.9.0"
authors = ["Snowfork <contact@snowfork.com>"]
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]

[lints]
workspace = true

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[dependencies]
bp-relayers = { default-features = true, workspace = true }
codec = { workspace = true, default-features = true }
frame-benchmarking = { optional = true, workspace = true, default-features = true }
frame-support = { default-features = true, workspace = true }
frame-system = { default-features = true, workspace = true }
pallet-asset-conversion = { default-features = true, workspace = true }
scale-info = { features = ["derive"], workspace = true, default-features = true }
snowbridge-core = { default-features = true, workspace = true }
snowbridge-outbound-queue-primitives = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
xcm = { default-features = true, workspace = true }
xcm-builder = { default-features = true, workspace = true }
xcm-executor = { default-features = true, workspace = true }

[features]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"snowbridge-core/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
