[package]
name = "cumulus-client-cli"
version = "0.29.0"
authors.workspace = true
edition.workspace = true
description = "Parachain node CLI utilities."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
sc-chain-spec = { default-features = true, workspace = true }
sc-cli = { default-features = false, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-service = { default-features = false, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
url = { workspace = true }
