[package]
name = "cumulus-client-collator"
version = "0.29.0"
authors.workspace = true
edition.workspace = true
description = "Common node-side functionality and glue code to collate parachain blocks."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = true }
cumulus-client-consensus-common = { default-features = true, workspace = true }
cumulus-client-network = { default-features = true, workspace = true }
cumulus-primitives-core = { default-features = true, workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true, default-features = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-node-subsystem = { default-features = true, workspace = true }
polkadot-overseer = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
async-trait = { workspace = true }

# Substrate
sp-maybe-compressed-blob = { default-features = true, workspace = true }
sp-state-machine = { default-features = true, workspace = true }
sp-tracing = { default-features = true, workspace = true }

# Polkadot
polkadot-node-subsystem-test-helpers = { workspace = true }

# Cumulus
cumulus-test-client = { workspace = true }
cumulus-test-relay-sproof-builder = { default-features = true, workspace = true }
cumulus-test-runtime = { workspace = true }
