[package]
name = "cumulus-client-network"
version = "0.29.0"
authors.workspace = true
description = "Cumulus-specific networking protocol"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codec = { features = ["derive"], workspace = true, default-features = true }
cumulus-relay-chain-interface = { default-features = true, workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
parking_lot = { workspace = true, default-features = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-node-subsystem = { default-features = true, workspace = true }
polkadot-parachain-primitives = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
polkadot-primitives-test-helpers = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-state-machine = { default-features = true, workspace = true }
sp-version = { default-features = true, workspace = true }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { features = ["macros"], workspace = true, default-features = true }

# Substrate
sp-keyring = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }

# Polkadot
polkadot-test-client = { workspace = true }

# Cumulus
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-relay-chain-inprocess-interface = { default-features = true, workspace = true }
cumulus-test-service = { workspace = true }
