[package]
authors.workspace = true
name = "cumulus-client-proof-size-recording"
version = "0.2.0"
edition.workspace = true
description = "Storage proof size recording utilities."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { workspace = true, default-features = true }
sc-client-api.workspace = true
sc-client-api.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-trie.workspace = true
sp-trie.default-features = true
