[package]
authors.workspace = true
name = "cumulus-relay-chain-inprocess-interface"
version = "0.32.0"
edition.workspace = true
description = "Implementation of the RelayChainInterface trait for Polkadot full-nodes."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
cumulus-client-bootnodes = { default-features = true, workspace = true }
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-relay-chain-interface = { default-features = true, workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
polkadot-cli = { features = ["cli"], workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
polkadot-service = { default-features = true, workspace = true }
sc-cli = { default-features = false, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-sysinfo = { default-features = true, workspace = true }
sc-telemetry = { default-features = true, workspace = true }
sc-tracing = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-state-machine = { default-features = true, workspace = true }

[dev-dependencies]
# Substrate
sp-keyring = { default-features = true, workspace = true }

# Polkadot
metered = { features = ["futures_channel"], workspace = true }
polkadot-test-client = { workspace = true }
