[package]
authors.workspace = true
name = "cumulus-relay-chain-minimal-node"
version = "0.32.0"
edition.workspace = true
description = "Minimal node implementation to be used in tandem with RPC or light-client mode."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cumulus-client-bootnodes = { default-features = true, workspace = true }
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-relay-chain-interface = { default-features = true, workspace = true }
cumulus-relay-chain-rpc-interface = { default-features = true, workspace = true }
polkadot-core-primitives = { default-features = true, workspace = true }
polkadot-network-bridge = { default-features = true, workspace = true }
polkadot-node-network-protocol = { default-features = true, workspace = true }
polkadot-node-subsystem-util = { default-features = true, workspace = true }
polkadot-overseer = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
polkadot-service = { default-features = true, workspace = true }
prometheus-endpoint = { default-features = true, workspace = true }
sc-authority-discovery = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-network-common = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
sc-tracing = { default-features = true, workspace = true }
sc-utils = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-consensus-babe = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

array-bytes = { workspace = true, default-features = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true, default-features = true }
