[package]
authors.workspace = true
name = "cumulus-relay-chain-rpc-interface"
version = "0.29.0"
edition.workspace = true
description = "Implementation of the RelayChainInterface trait that connects to a remote RPC-node."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-relay-chain-interface = { default-features = true, workspace = true }
polkadot-overseer = { default-features = true, workspace = true }
prometheus-endpoint = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-rpc-api = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
sp-authority-discovery = { default-features = true, workspace = true }
sp-consensus-babe = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-state-machine = { default-features = true, workspace = true }
sp-storage = { default-features = true, workspace = true }
sp-version = { default-features = true, workspace = true }

tokio = { features = ["sync"], workspace = true, default-features = true }

async-trait = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
futures-timer = { workspace = true }
jsonrpsee = { features = ["ws-client"], workspace = true }
prometheus = { workspace = true }
schnellru = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
url = { workspace = true }

[dev-dependencies]
portpicker = { workspace = true }
