[package]

name = "cumulus-client-service"
version = "0.32.0"
authors.workspace = true
edition.workspace = true
description = "Common functions used to assemble the components of a parachain node."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-channel = { workspace = true }
cumulus-client-cli = { default-features = true, workspace = true }
cumulus-client-collator = { default-features = true, workspace = true }
cumulus-client-consensus-common = { default-features = true, workspace = true }
cumulus-client-network = { default-features = true, workspace = true }
cumulus-client-pov-recovery = { default-features = true, workspace = true }
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-primitives-proof-size-hostfunction = { default-features = true, workspace = true }
cumulus-relay-chain-inprocess-interface = { default-features = true, workspace = true }
cumulus-relay-chain-interface = { default-features = true, workspace = true }
cumulus-relay-chain-minimal-node = { default-features = true, workspace = true }
cumulus-relay-chain-streams = { default-features = true, workspace = true }
futures = { workspace = true }
polkadot-overseer = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
prometheus = { workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-consensus = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-network-sync = { default-features = true, workspace = true }
sc-network-transactions = { default-features = true, workspace = true }
sc-rpc = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
sc-sysinfo = { default-features = true, workspace = true }
sc-telemetry = { default-features = true, workspace = true }
sc-tracing = { default-features = true, workspace = true }
sc-transaction-pool = { default-features = true, workspace = true }
sc-utils = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-crypto-ec-utils = { workspace = true, features = ["rfc163"], default-features = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-transaction-pool = { default-features = true, workspace = true }
sp-trie = { default-features = true, workspace = true }
