[package]
name = "polkadot-omni-node-lib"
version = "0.14.0"
authors.workspace = true
edition.workspace = true
description = "Helper library that can be used to build a parachain node"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chain-spec-builder = { workspace = true }
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }

# Local
cumulus-client-bootnodes = { default-features = true, workspace = true }
cumulus-client-cli = { default-features = true, workspace = true }
cumulus-client-collator = { default-features = true, workspace = true }
cumulus-client-consensus-aura = { default-features = true, workspace = true }
cumulus-client-consensus-common = { default-features = true, workspace = true }
cumulus-client-consensus-relay-chain = { default-features = true, workspace = true }
cumulus-client-parachain-inherent = { default-features = true, workspace = true }
cumulus-client-service = { default-features = true, workspace = true }
cumulus-primitives-aura = { default-features = true, workspace = true }
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-relay-chain-interface = { default-features = true, workspace = true }
frame-benchmarking = { optional = true, workspace = true, default-features = true }
frame-benchmarking-cli = { default-features = true, workspace = true }
frame-support = { optional = true, workspace = true, default-features = true }
frame-system-rpc-runtime-api = { default-features = true, workspace = true }
frame-try-runtime = { optional = true, workspace = true, default-features = true }
futures-timer = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
pallet-transaction-payment = { default-features = true, workspace = true }
pallet-transaction-payment-rpc = { default-features = true, workspace = true }
pallet-transaction-payment-rpc-runtime-api = { default-features = true, workspace = true }
parachains-common-types = { default-features = true, workspace = true }
polkadot-cli = { workspace = true, features = ["service"], default-features = true }
polkadot-primitives = { default-features = true, workspace = true }
prometheus-endpoint = { default-features = true, workspace = true }
sc-basic-authorship = { default-features = true, workspace = true }
sc-chain-spec = { default-features = true, workspace = true }
sc-cli = { default-features = false, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-client-db = { default-features = true, workspace = true }
sc-consensus = { default-features = true, workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-manual-seal = { default-features = true, workspace = true }
sc-executor = { default-features = true, workspace = true }
sc-keystore = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-network-statement = { default-features = true, workspace = true }
sc-network-sync = { default-features = true, workspace = true }
sc-offchain = { default-features = true, workspace = true }
sc-rpc = { default-features = true, workspace = true }
sc-runtime-utilities = { default-features = true, workspace = true }
sc-service = { default-features = false, workspace = true }
sc-statement-store = { default-features = true, workspace = true }
sc-storage-monitor = { default-features = true, workspace = true }
sc-sysinfo = { default-features = true, workspace = true }
sc-telemetry = { default-features = true, workspace = true }
sc-tracing = { default-features = true, workspace = true }
sc-transaction-pool = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
scale-info = { workspace = true }
sp-api = { default-features = true, workspace = true }
sp-block-builder = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-consensus-aura = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
sp-offchain = { default-features = true, workspace = true }
sp-runtime = { workspace = true }
sp-session = { default-features = true, workspace = true }
sp-statement-store = { default-features = true, workspace = true }
sp-storage = { default-features = true, workspace = true }
sp-timestamp = { default-features = true, workspace = true }
sp-transaction-pool = { default-features = true, workspace = true }
sp-transaction-storage-proof = { default-features = true, workspace = true }
sp-version = { default-features = true, workspace = true }
sp-weights = { default-features = true, workspace = true }
substrate-frame-rpc-system = { default-features = true, workspace = true }
substrate-state-trie-migration-rpc = { default-features = true, workspace = true }
subxt-metadata = { workspace = true, default-features = true }

[dev-dependencies]
assert_cmd = { workspace = true }
cumulus-test-runtime = { workspace = true }
nix = { features = ["signal"], workspace = true }
tokio = { version = "1.43.1", features = ["macros", "parking_lot", "time"] }
wait-timeout = { workspace = true }

[features]
default = []
rococo-native = ["polkadot-cli/rococo-native"]
westend-native = ["polkadot-cli/westend-native"]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-client-db/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
