[package]
name = "cumulus-test-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
cumulus-pallet-weight-reclaim = { default-features = true, workspace = true }
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-primitives-parachain-inherent = { default-features = true, workspace = true }
cumulus-primitives-proof-size-hostfunction = { default-features = true, workspace = true }
cumulus-test-relay-sproof-builder = { default-features = true, workspace = true }
cumulus-test-runtime = { workspace = true }
cumulus-test-service = { workspace = true }
frame-system = { default-features = true, workspace = true }
pallet-balances = { default-features = true, workspace = true }
pallet-transaction-payment = { default-features = true, workspace = true }
polkadot-parachain-primitives = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
sc-block-builder = { default-features = true, workspace = true }
sc-consensus = { default-features = true, workspace = true }
sc-consensus-aura = { default-features = true, workspace = true }
sc-executor = { default-features = true, workspace = true }
sc-executor-common = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-application-crypto = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus-aura = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-inherents = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-timestamp = { default-features = true, workspace = true }
sp-trie = { default-features = true, workspace = true }
substrate-test-client = { workspace = true }

[features]
runtime-benchmarks = [
	"cumulus-pallet-weight-reclaim/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-test-service/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
